using angular routing with ng-view for home and workspace pages

--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -1,28 +1,22 @@
-extends layout
-block scripts
-    script(type='text/javascript' src='/javascripts/workspaceApp.js')
-    script(type='text/javascript' src='/socket.io/socket.io.js')
-    script(type='text/javascript' src='/dropzone.js')
-    link(rel='stylesheet' href='/stylesheets/workspace.css')
+link(rel='stylesheet' href='/stylesheets/workspace.css')
 
-block content
-    div.fill(ng-app='workspaceApp' ng-controller='workspaceController' ng-init="init('#{username}', '#{groupName}')")
-        div.fill()
-            div.space-panel#dropzone
-                h1.noselect#dndText Drag and drop files here
-            input#un-hide-btn(type='button' value='Show' ng-hide='chatVisible' ng-click='showChat()')
-            div.chat-panel(ng-show='chatVisible')
-                div.users-bar
-                    input#hide-btn(type='button' value='Hide' ng-click='hideChat()')
-                div.messages-panel#msgpanel(onscroll='updateScrollState()')
-                    div.row(ng-repeat='message in messages track by $index')
-                        div.col-xs-1
-                        div.col-xs-1.user {{message.user.substring(0, 1).toUpperCase()}}
-                            div.tooltip {{message.user}}
-                        div.col-xs-7.chatMessage
-                            span#chat(ng-bind='message.content')
-                        button.col-xs-1.btn.btn-primary(type='button' ng-click='buttonClicked(message.content)') +
-                        button.col-xs-1.btn.btn-primary(type='button' ng-if='message.user === username' ng-click='removeMessage(message.timestamp)') x
-                div.text-bar
-                    form(ng-submit='sendMessage()')
-                        input#messagebox(type='text' ng-model='newMessage' placeholder='  Type a message...' autofocus)
+div.fill(ng-init="init('#{username}', '#{groupName}')")
+    div.fill()
+        div.space-panel#dropzone
+            h1.noselect#dndText Drag and drop files here
+        input#un-hide-btn(type='button' value='Show' ng-hide='chatVisible' ng-click='showChat()')
+        div.chat-panel(ng-show='chatVisible')
+            div.users-bar
+                input#hide-btn(type='button' value='Hide' ng-click='hideChat()')
+            div.messages-panel#msgpanel(onscroll='updateScrollState()')
+                div.row(ng-repeat='message in messages track by $index')
+                    div.col-xs-1
+                    div.col-xs-1.user {{message.user.substring(0, 1).toUpperCase()}}
+                        div.tooltip {{message.user}}
+                    div.col-xs-7.chatMessage
+                        span#chat(ng-bind='message.content')
+                    button.col-xs-1.btn.btn-primary(type='button' ng-click='buttonClicked(message.content)') +
+                    button.col-xs-1.btn.btn-primary(type='button' ng-if='message.user === username' ng-click='removeMessage(message.timestamp)') x
+            div.text-bar
+                form(ng-submit='sendMessage()')
+                    input#messagebox(type='text' ng-model='newMessage' placeholder='  Type a message...' autofocus)
