--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,14 @@
-div {
-	position: relative;
-}
-
 body {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     background: url(/images/background.png) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+}
+
+.bodyStyleHack {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
