--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
 extends layout
 block scripts
-    script(type='text/javascript' src='/javascripts/index.js')
-    script(type='text/javascript' src='/javascripts/workspaceController.js')
-    script(type='text/javascript' src='/javascripts/homeController.js')
+    script(type='text/javascript' src='/javascript/runwayApp.js')
+    script(type='text/javascript' src='/javascript/workspaceController.js')
+    script(type='text/javascript' src='/javascript/homeController.js')
     script(type='text/javascript' src='/socket.io/socket.io.js')
     script(type='text/javascript' src='/dropzone.js')
 
