--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -27,7 +27,7 @@
     user-select: none;
 }
 
-#dropzone.hover{
+#dropzone.hover {
     border-color: red;
 }
 
@@ -60,7 +60,7 @@
     overflow: visible;
 }
 
-.right-panel{
+.right-panel {
     position: absolute;
     height: 100%;
     width: 25%;
@@ -89,6 +89,7 @@
 #messagebox {
     height: 48px;
     width: 100%;
+    padding: 10px
 }
 
 .chatMessage {
