--- a/views/login.jade
+++ b/views/login.jade
@@ -6,6 +6,7 @@ html
         link(rel='stylesheet', href='/stylesheets/style.css')
         link(rel="stylesheet",href="/css/bootstrap.min.css")
 
+        script(type='text/javascript', src='jquery.min.js')
         script(type='text/javascript' src="/js/bootstrap.min.js")
 
     body
