--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -14,7 +14,7 @@
     margin-top: -28px;
     line-height: 55px;
     font-size: 55px;
-    color: #e6e6e6;
+    color: lightgray;
     cursor: default;
 }
 
@@ -27,8 +27,8 @@
     user-select: none;
 }
 
-#dropzone.hover{
-    border-color: red;
+#dropzone.hover {
+    border: 2px solid red
 }
 
 .space-content {
@@ -41,7 +41,7 @@
     right: 0;
     border: none;
     background-color: #ffdd99;
-    color: #888;
+    color: gray;
     font-size: 14px;
     font-weight: bold;
     height: 48px;
@@ -52,7 +52,7 @@
 .chat-panel {
     border-style: solid;
     border-width: 0px 0px 0px 1px;
-    border-color: #000000;
+    border-color: black;
     position: relative;
     float: right;
     height: 100%;
@@ -60,7 +60,7 @@
     overflow: visible;
 }
 
-.right-panel{
+.right-panel {
   position: absolute;
   height: 100%;
   width: 25%;
@@ -81,7 +81,7 @@
     bottom: 48px;
     top: 48px;
     width: 100%;
-    background-color: #ffffff;
+    background-color: white;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -111,7 +111,7 @@
     bottom: 0px;
     height: 48px;
     width: 100%;
-    background-color: #ffffff;
+    background-color: white;
 }
 
 .fill {
@@ -123,7 +123,7 @@
 #hide-btn {
     border: none;
     background-color: transparent;
-    color: #888;
+    color: gray;
     font-size: 14px;
     font-weight: bold;
     height: 48px;
@@ -131,19 +131,19 @@
     padding: 16px;
 }
 
-#hide-btn: hover, #un-hide-btn: hover {
+#hide-btn:hover, #un-hide-btn:hover {
     background-color: #5d176a;
 }
 
 .user {
-    color: #ffffff;
+    color: white;
     font-size: 12px;
     text-align: center;
     line-height: 30px;
     border-radius: 100px;
     margin-top: 5px;
     margin-bottom: 5px;
-    background-color: #bfbfbf;
+    background-color: gray;
     word-wrap: break-word;
    -webkit-transform: translateZ(0); /* webkit flicker fix */
    -webkit-font-smoothing: antialiased; /* webkit text rendering fix */
@@ -180,7 +180,7 @@
             box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
 }
 
-.user .tooltip: before {
+.user .tooltip:before {
     bottom: -20px;
     content: " ";
     display: block;
@@ -190,7 +190,7 @@
     width: 100%;
 }
 
-.user .tooltip: after {
+.user .tooltip:after {
     border-left: solid transparent 10px;
     border-right: solid transparent 10px;
     border-top: solid #1496bb 10px;
@@ -203,7 +203,7 @@
     width: 0;
 }
 
-.user: hover .tooltip {
+.user:hover .tooltip {
     opacity: 1;
     pointer-events: auto;
     -webkit-transform: translateY(0px);
