added jquery css styles for use with resizeable later on

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,11 +4,12 @@ html
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
         link(rel="stylesheet",href="/css/bootstrap.min.css")
+        link(rel="stylesheet",href="/jquery-ui-bundle/jquery-ui.min.css")
 
         script(type='text/javascript', src='angular.min.js')
         script(type='text/javascript', src='jquery.min.js')
         script(type='text/javascript' src="/js/bootstrap.min.js")
-        script(type='text/javascript' src='/jquery-ui-bundle/jquery-ui.js')
+        script(type='text/javascript' src='/jquery-ui-bundle/jquery-ui.min.js')
 
         block scripts
     body.bodyStyleHack
