--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -19,7 +19,7 @@ block content
                     div.col-xs-1.user {{message.user.substring(0, 1).toUpperCase()}}
                         div.tooltip {{message.user}}
                     div.col-xs-7.chatMessage
-                        span#chat(ng-bind='message.content')
+                        p#chat(ng-bind='message.content')
                     button.col-xs-1.btn.btn-primary(type='button' ng-click='addMessageToWorkspace(message.content)') +
                     button.col-xs-1.btn.btn-primary(type='button' ng-if='message.user === username' ng-click='removeMessage(message.timestamp)') x
             div.text-bar
