added jquery-ui-touch-punch for use with touch screens

--- a/public/stylesheets/workspace.css
+++ b/public/stylesheets/workspace.css
@@ -14,7 +14,7 @@
     margin-top: -28px;
     line-height: 55px;
     font-size: 55px;
-    color: lightgray;
+    color: Lightgray;
     cursor: default;
 }
 
