--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -1,6 +1,7 @@
 extends layout
 block scripts
     script(type='text/javascript' src='/javascripts/workspaceApp.js')
+    script(type='text/javascript' src='/jquery.ui.touch-punch.min.js')
     script(type='text/javascript' src='/socket.io/socket.io.js')
     script(type='text/javascript' src='/dropzone.js')
     link(rel='stylesheet' href='/stylesheets/workspace.css')
