--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,5 +12,5 @@ html
         script(type='text/javascript' src='/jquery-ui-bundle/jquery-ui.min.js')
 
         block scripts
-    body.bodyStyleHack
+    body
         block content
