--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,10 +1,32 @@
-.login-form {
+.outer {
+    display: table;
     position: absolute;
-    bottom: 60px;
-    left: 35%;
-    right: 35%;
+    height: 100%;
+    width: 100%;
+}
+
+.middle {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.inner {
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
 }
 
 #signInButton {
     float: right;
+}
+
+@media only screen and (min-width:480px) {
+    .inner {
+        width: 60%;
+    }
+}
+@media only screen and (min-width:960px) {
+    .inner {
+        width: 30%;
+    }
 }
