--- a/views/groups.jade
+++ b/views/groups.jade
@@ -1,17 +1,20 @@
-div.container
-    div.row
-        div.col-lg-4.col-lg-offset-4.col-xs-6.col-xs-offset-3#homeGroup
-            div
-                h1.text-center Welcome, {{username}}!
-            label Go to...
-            div.list-group#homeListGroup
-                div.alert.alert-danger(ng-bind='error' ng-show='error')
-                div.alert.alert-warning(ng-show='groups.length === 0') You have no rooms. Create one!
-                div(ng-repeat='group in groups track by $index')
-                    a.list-group-item.text-center(type="button" ng-href='/workspace?group={{group}}') {{group}}
-            form.form-auth(ng-submit='addGroup()')
-                div.form-group
-                    label.input-lg(for="newGroupName") Create a new group
-                    input#newGroupName.form-control(type="text" ng-model='newGroupName' placeholder="Enter a group name..." autofocus)
-                    div.form-group.alert.alert-danger(ng-bind='newGroupError' ng-show='newGroupError')
-                    input.btn.btn-primary#createGroupButton(type="submit" value="Create Group")
+div.sidebar
+div.virticalBar
+    div.virticalPadding
+    div.header.box
+        h1.text-center Welcome, {{username}}!
+        label Go to...
+    div.middle.box
+        div.alert.alert-danger(ng-bind='error' ng-show='error')
+        div.alert.alert-warning(ng-show='groups.length === 0') You have no rooms. Create one!
+        div(ng-repeat='group in groups | orderBy: name track by $index')
+            a.list-group-item.text-center(type="button" ng-href='/workspace?group={{group}}') {{group}}
+    div.footer
+        div.box
+            label.input-lg(for="newGroupName") Create a new group
+            div.alert.alert-danger(ng-bind='newGroupError' ng-show='newGroupError')
+            form.flowForm(ng-submit='addGroup()')
+                input.form-control#newGroupName(type="text" ng-model='newGroupName' placeholder="Enter a group name..." autofocus)
+                input.btn.btn-primary#createGroupButton(type="submit" value="Create Group")
+    div.virticalPadding
+div.sidebar
