--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,52 +1,5 @@
-html, body, #container {
+html, body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-}
-
-#container {
-    display: flex;
-}
-
-.sidebar {
-    flex-grow: 0;
-    width: 25%;
-}
-
-.virticalBar {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-grow: 1;
-    height: 100%;
-}
-
-.virticalPadding {
-    height: 10%;
-    flex-shrink: 0;
-}
-
-.box {
-    background-color: #808080;
-    opacity: 0.9;
-    padding: 10px 10px;
-}
-
-.header {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.footer {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.middle {
-    overflow-x: hidden;
-    overflow-y: auto;
-}
-
-.flowForm {
-    display: flex;
 }
