--- a/views/groups.jade
+++ b/views/groups.jade
@@ -2,7 +2,7 @@ link(rel='stylesheet' href='/stylesheets/groups.css')
 div.sidePadding
 div.centerColumn
     div.virticalPadding
-    div.contentBox.contentBox
+    div.contentBox.contentBoxHeader
         h1.text-center Welcome, {{username}}!
         label Go to...
     div.contentBox.contentBoxMiddle
